--- a/maxxmills/css/sample.css
+++ b/maxxmills/css/sample.css
@@ -11,7 +11,7 @@
   max-width: 900px;
   margin: 0 auto;
   padding: 0 1.5rem;
-  text-align: left;
+  text-align: left !important;
 }
 
 .case-title {
@@ -19,6 +19,7 @@
   font-weight: 600;
   margin: 0 0 1rem;
   color: var(--background-color);
+  text-align: left !important;
 }
 
 .case-intro {
@@ -26,6 +27,7 @@
   font-size: 1rem;
   line-height: 1.7;
   color: var(--background-color);
+  text-align: left !important;
 }
 
 .case-image {
@@ -66,6 +68,7 @@
   font-size: 0.98rem;
   line-height: 1.7;
   color: var(--background-color);
+  text-align: left !important;
 }
 
 @media (max-width: 768px) {
